; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_engine_cs.c_i915_cache_level_str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_engine_cs.c_i915_cache_level_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c" uncached\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c" LLC\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c" snooped\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c" L3+LLC\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c" WT\00", align 1
@.str.5 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @i915_cache_level_str(%struct.drm_i915_private* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.drm_i915_private*, align 8
  %5 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 129, label %7
    i32 130, label %8
    i32 131, label %14
    i32 128, label %15
  ]

7:                                                ; preds = %2
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %17

8:                                                ; preds = %2
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %4, align 8
  %10 = call i32 @HAS_LLC(%struct.drm_i915_private* %9)
  %11 = icmp ne i32 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0)
  store i8* %13, i8** %3, align 8
  br label %17

14:                                               ; preds = %2
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %17

15:                                               ; preds = %2
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %17

16:                                               ; preds = %2
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %17

17:                                               ; preds = %16, %15, %14, %8, %7
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i32 @HAS_LLC(%struct.drm_i915_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
